@@ -81,7 +81,7 @@ SYSCONF_LINK_LIB_STATIC	= rm -f $(DESTDIR)$(SYSCONF_LINK_TARGET_STATIC) ; \
 #SYSCONF_CXXFLAGS	= -pipe -O2 -Wall -W
 #SYSCONF_CFLAGS		= -pipe -O2 -Wall -W
 SYSCONF_CXXFLAGS	= -pipe -O2 -w -fpermissive
-SYSCONF_CFLAGS		= -pipe -O2 -w -fpermissive
+SYSCONF_CFLAGS		= -pipe -O2 -w
 
 # Default link type (static linking is still be used where required)
 SYSCONF_LINK_LIB	= $(SYSCONF_LINK_LIB_SHARED)
