@@ -1,63 +1,110 @@
 /****************************************************************************
-** $Id: qt/src/tools/qvaluestack.h   2.3.2   edited 2001-01-26 $
-**
-** Definition of QValueStack class
-**
-** Created : 990925
-**
-** Copyright (C) 1992-2000 Trolltech AS.  All rights reserved.
-**
-** This file is part of the tools module of the Qt GUI Toolkit.
-**
-** This file may be distributed under the terms of the Q Public License
-** as defined by Trolltech AS of Norway and appearing in the file
-** LICENSE.QPL included in the packaging of this file.
-**
-** This file may be distributed and/or modified under the terms of the
-** GNU General Public License version 2 as published by the Free Software
-** Foundation and appearing in the file LICENSE.GPL included in the
-** packaging of this file.
-**
-** Licensees holding valid Qt Enterprise Edition or Qt Professional Edition
-** licenses may use this file in accordance with the Qt Commercial License
-** Agreement provided with the Software.
-**
-** This file is provided AS IS with NO WARRANTY OF ANY KIND, INCLUDING THE
-** WARRANTY OF DESIGN, MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
-**
-** See http://www.trolltech.com/pricing.html or email sales@trolltech.com for
-**   information about Qt Commercial License Agreements.
-** See http://www.trolltech.com/qpl/ for QPL licensing information.
-** See http://www.trolltech.com/gpl/ for GPL licensing information.
-**
-** Contact info@trolltech.com if any conditions of this licensing are
-** not clear to you.
-**
-**********************************************************************/
+ ** $Id: qt/src/tools/qvaluestack.h   2.3.2   edited 2001-01-26 $
+ **
+ ** Definition of QValueStack class
+ **
+ ** Created : 990925
+ **
+ ** Copyright (C) 1992-2000 Trolltech AS.  All rights reserved.
+ **
+ ** This file is part of the tools module of the Qt GUI Toolkit.
+ **
+ ** This file may be distributed under the terms of the Q Public License
+ ** as defined by Trolltech AS of Norway and appearing in the file
+ ** LICENSE.QPL included in the packaging of this file.
+ **
+ ** This file may be distributed and/or modified under the terms of the
+ ** GNU General Public License version 2 as published by the Free Software
+ ** Foundation and appearing in the file LICENSE.GPL included in the
+ ** packaging of this file.
+ **
+ ** Licensees holding valid Qt Enterprise Edition or Qt Professional Edition
+ ** licenses may use this file in accordance with the Qt Commercial License
+ ** Agreement provided with the Software.
+ **
+ ** This file is provided AS IS with NO WARRANTY OF ANY KIND, INCLUDING THE
+ ** WARRANTY OF DESIGN, MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
+ **
+ ** See http://www.trolltech.com/pricing.html or email sales@trolltech.com for
+ **   information about Qt Commercial License Agreements.
+ ** See http://www.trolltech.com/qpl/ for QPL licensing information.
+ ** See http://www.trolltech.com/gpl/ for GPL licensing information.
+ **
+ ** Contact info@trolltech.com if any conditions of this licensing are
+ ** not clear to you.
+ **
+ **********************************************************************/
 
 #ifndef QVALUESTACK_H
 #define QVALUESTACK_H
 
+
+#if 1
+
+#include <stack>		// STL
+template <typename T>
+class Q_EXPORT QValueStack
+{
+ private: std::stack<T> st;
+
+ public:
+   QValueStack() {}
+   ~QValueStack() {}
+
+   void  push( const T& d ) {
+      st.push(d);
+   }
+
+   // use QT semantics, hide std::stack
+   const T& pop2() const {
+      const T& d = st.top();
+      st.pop();
+      return d;
+   }
+   
+   // use QT semantics, hide std::stack
+   T& pop2() {
+      T& d = st.top();
+      st.pop();
+      return d;
+   }
+
+   T& top() { return st.top();}
+   const T& top() const { st.top(); }
+
+   bool isEmpty() const { return st.empty(); }
+
+   int count() const { return st.size(); }
+
+   void clear(){
+      while (!st.empty()) {
+	 st.pop();
+      }
+   }
+};
+
+// --------- before ---------------------------
+#else
 #ifndef QT_H
 #include "qvaluelist.h"
 #endif // QT_H
 
-
 template<class T>
 class Q_EXPORT QValueStack : public QValueList<T>
 {
-public:
-    QValueStack() {}
+ public:
+   QValueStack() {}
    ~QValueStack() {}
-    void  push( const T& d ) { append(d); }
-    T pop()
-    {
-	T elem( this->last() );
-	// fail: if ( !this->isEmpty() )   remove( this->fromLast() );
-	return elem;
-    }
-    T& top() { return this->last(); }
-    const T& top() const { return this->last(); }
+   void  push( const T& d ) { append(d); }
+   T pop()
+   {
+      T elem( this->last() );
+      // fail: if ( !this->isEmpty() )   remove( this->fromLast() );
+      return elem;
+   }
+   T& top() { return this->last(); }
+   const T& top() const { return this->last(); }
 };
-
 #endif
+
+#endif  // #define QVALUESTACK_H
